<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alerted</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_temp">Start</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>

    <string name="action_logout">Logout</string>
    <string name="desc_urgency">How soon:</string>
    <string name="desc_severity">How severe:</string>
    <string name="desc_certainty">How likely:</string>
    <string name="expires_text">Expires:</string>
    <string name="effective_text">Effective:</string>
    <string name="local_service_started">Service Started Text from Res</string>
    <string name="action_test">Test</string>
    <string name="empty_listview_text">No alerts to show right now.</string>
    <string name="empty_listview_subtext">We receive thousands of alerts every day, and when one is active near your current location, you will receive a notification.</string>


    <!-- GCM -->
    <string name="http_auth_token">AlertedToken</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- For Notifications -->
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="connected">Client connected</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="disconnected">Client disconnected</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="location_updated">Location updated</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="auth_token_name">Auth Token</string>
    <!--<string name="project_number">840452629019</string>-->
    <string name="introduction">Welcome!</string>
    <string name="clear_screen">Clear Screen</string>
    <string name="first_launch">First Launch</string>
    <string name="num_of_missed_messages">MissedMessageCount</string>
    <string name="lines_of_message_count">LinesOfMessageCount</string>
    <string name="preferences">PreferencesFile</string>
    <string name="notification_number">1337</string>
    <string name="title_activity_first">Alerted</string>
    <string name="title_activity_signup">Alerted</string>


    <!-- For Alert Details -->
    <string name="alert_description">DESCRIPTION</string>
    <string name="alert_instruction">INSTRUCTIONS</string>
    <string name="alert_summary">SUMMARY</string>

    <!-- For API Auth Stuff -->
    <string name="was_sns_submitted">No</string>
    <string name="post_new_gmc_token">Yes</string>
    <string name="title_activity_main_detail">MainDetailActivity</string>
    <string name="title_alert_list">Alerts</string>
    <string name="title_alert_detail">Alert Detail</string>

    <!-- For shared preferences -->
    <string name="last_check">cap_date_received</string>
</resources>
