<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="us.alerted.alerted.MainDetailActivity"
    android:background="#e5e5e5"
    android:id="@+id/scrollView">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:orientation="vertical"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/square_borders"
        android:padding="15dp"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_summary"
            android:id="@+id/alert_summary"
            android:textSize="15dp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"

            android:background="@android:color/darker_gray"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/headline"
            android:textSize="15dp" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/effective_text"
                android:id="@+id/effectiveLabel"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/effective"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expires_text"
                android:id="@+id/expiresLabel"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expires"
                android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/square_borders"
        android:padding="15dp"
        android:layout_marginTop="15dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/desc_urgency"
                android:textColor="@android:color/secondary_text_dark"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/urgency_image"
                android:layout_width="40dp"
                android:layout_height="26dp"
                android:src="@drawable/fourbar"
                android:maxHeight="48dp"
                android:layout_marginTop="4dp" />

            <TextView
                android:text="@string/desc_severity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@android:color/secondary_text_dark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingLeft="15dp" />

            <ImageView
                android:id="@+id/severity_image"
                android:layout_width="40dp"
                android:layout_height="26dp"
                android:src="@drawable/fourbar"
                android:maxHeight="48dp"
                android:layout_marginTop="4dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/desc_certainty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@android:color/secondary_text_dark"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/certainty_image"
                android:layout_width="40dp"
                android:layout_height="26dp"
                android:src="@drawable/fourbar"
                android:maxHeight="48dp"
                android:layout_marginTop="4dp" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/square_borders"
        android:padding="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_description"
            android:id="@+id/alert_description"
            android:textSize="15dp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"

            android:background="@android:color/darker_gray"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/square_borders"
        android:padding="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_instruction"
            android:id="@+id/alert_instruction"
            android:textSize="15dp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"

            android:background="@android:color/darker_gray"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instruction"
            android:textSize="15dp" />

    </LinearLayout>





</LinearLayout>
    </ScrollView>
