<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_no_border"
    android:orientation="vertical"
    android:id="@+id/card"
    android:padding="2dp">

       <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#040404"
        android:textStyle="bold"
        android:typeface="sans" />

    <!--
    <ImageView
        android:id="@+id/list_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_weight="0.04"
        android:scaleType="fitXY"
        android:layout_margin="2dp"
        android:src="@drawable/prisoners" />
    -->


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/desc_urgency"
        android:textStyle="bold"
        android:textColor="@android:color/secondary_text_dark"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/urgency_image"
            android:layout_width="40dp"
            android:layout_height="26dp"
            android:src="@drawable/fourbar"
            android:maxHeight="48dp"
            android:layout_marginTop="4dp" />

        <TextView
            android:text="@string/desc_severity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textStyle="bold"
            android:textColor="@android:color/secondary_text_dark"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="15dp" />

        <ImageView
            android:id="@+id/severity_image"
            android:layout_width="40dp"
            android:layout_height="26dp"
            android:src="@drawable/fourbar"
            android:maxHeight="48dp"
            android:layout_marginTop="4dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/desc_certainty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textStyle="bold"
            android:textColor="@android:color/secondary_text_dark"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/certainty_image"
            android:layout_width="40dp"
            android:layout_height="26dp"
            android:src="@drawable/fourbar"
            android:maxHeight="48dp"
            android:layout_marginTop="4dp" />

    </LinearLayout>

</LinearLayout>
